<resources>
    <string name="app_name">pdm2-avaliacao-01</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_localizacao">Localização</string>

    <string name="menu_home">Home</string>
    <string name="menu_descricao">Descrição</string>
    <string name="menu_detalhes">Detalhes</string>
    <string name="menu_maior_menor">Maior/Menor</string>
    <string name="menu_jogar">Jogar</string>
    <string name="menu_maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>