<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_descricao"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_descricao" />
        <item
            android:id="@+id/nav_detalhes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_detalhes" />
        <item
            android:id="@+id/nav_maior_menor"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_maior_menor" />
        <item
            android:id="@+id/nav_jogar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_jogar" />
    </group>
</menu>